@@ -1,3 +1,13 @@
+2009-07-23  Anton Muhin  <antonm@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        Simplify management of Nodes in weak handles callbacks.
+        https://bugs.webkit.org/show_bug.cgi?id=27628
+
+        * bindings/v8/V8DOMMap.cpp:
+        (WebCore::weakNodeCallback):
+
 2009-07-28  Brian Weinstein  <bweinstein@apple.com>
 
         Rubber-stamped by David Levin.
